--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <h2>📬 Contact Me</h2>
     <p><strong>Email:</strong> vishnuswarnkar78@gmail.com</p>
     <p><strong>Phone:</strong> 8299828601</p>
-    <p><strong>GitHub:</strong> [Add Link Here]</p>
+    <p><strong>GitHub:</strong> [https://github.com/VishnuSwarnkar12]</p>
     <p><strong>👁️ Views:</strong> <span id="viewCount">0</span></p>
   </section>
 
